--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,9 +31,9 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
 }
-
+/* why is this here? almost positive the display function overwrites this */
 .header div ul {
-    list-style-type: none;
+    /* list-style-type: none; */
 }
 
 .header div ul li {
@@ -74,7 +74,7 @@ p {
     display: inline-block;
     margin-left: 20px;
 }
-
+/* should add the h3, color and div margins to parent. and this whole ection should be under content */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -133,7 +133,8 @@ p {
     margin: 10px auto;
     max-width: 150px;
 }
-
+/* End of benefits aside */
+/* These all have the same attributes. i shouldplace the code all under the content class */
 .search-engine-optimization {
     margin-bottom: 20px;
     padding: 50px;
