--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ body {
 }
 /* why is this here? almost positive the display function overwrites this */
 .header div ul {
-    /* list-style-type: none; */
+    list-style-type: none;
 }
 
 .header div ul li {
